tests/ok/block-comments.ari
fn main() -> i64 {
  /* outer
     /* nested */
     still comment
  */
  return 0;
}
