tests/errors/vector-extern-return-runtime-abi.ari
extern "C" fn make_values() -> Vec[i64];

fn main() -> i64 {
  return 0;
}
